<resources>
    <string name="app_name">PlusOne</string>
    <string name="title_activity_guest_map">Map</string>

    <!--SPLASH SCREEN STRINGS-->
    <string name="username">Annie User</string>
    <string name="hostButton">Host</string>
    <string name="guestButton">Guest</string>
    <!--SPLASH SCREEN STRINGS-->

    <!--HOST MAIN STRING-->
    <string name="hostDetails">Details</string>
    <string name="hostIngredients">Ingredients</string>
    <string name="date">Date</string>
    <string name="exclusivity">Exclusivity</string>
    <string name="numberOfGuests">Number of Guests</string>
    <!--HOST MAIN STRING-->

    <!--VEGAN RECIPE STRINGS-->
    <string name="descriptionOne">Here\'s a quick vegetarian version of the Brazilian national dish known as feijoada. This stew entices the eye with the colorful contrast of black beans and sweet potatoes and pleases the palate with nourishing ingredients.</string>
    <string name="titleOne">Vegan Title</string>
    <string name="connect_fb">connect Facebook</string>
    <string name="connect_google">connect Google</string>
    <string name="connect_twitter">connect Twitter</string>
    <string name="connect_ig">connect Instagram</string>
    <string name="title_activity_map_nav">MapNav</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <!--VEGAN RECIPE STRINGS-->

    <!--Map Nav Drawer Section Titles-->
    <string name="head1">Home</string>
    <string name="head2">Us</string>
    <string name="head3">You</string>
    <!--Map Nav Drawer Section Titles-->

    <!--Map Nav Drawer Item Titles-->
    <string name="t1">Cuisines</string>
    <string name="t2">Favorites</string>
    <string name="t3">Featured</string>
    <string name="t4">Search</string>
    <string name="t5">About Us</string>
    <string name="t6">Terms and Conditions</string>
    <string name="t7">Settings</string>
    <string name="t8">Profile</string>
    <string name="t9">My Events</string>
    <!--Map Nav Drawer Item Titles-->
</resources>
