<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.maxaaustin.plusone.MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profilePicture"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="16dp"
            app:srcCompat="@color/colorAccent"/>

    </FrameLayout>

    <TextView
        android:id="@+id/nameText"
        android:layout_marginTop="45dp"
        style="@style/ProfileNameText"
        android:text="@string/username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <Button
            android:id="@+id/buttonTwo"
            style="@style/SplashButtons"
            android:layout_weight="1"
            android:text="@string/hostButton"
            />

        <Button
            android:id="@+id/buttonOne"
            style="@style/SplashButtons"
            android:layout_weight="1"
            android:text="@string/guestButton"
            />
    </LinearLayout>



</android.support.constraint.ConstraintLayout>
